v0.3.17 - Forced Alignment Fix

--- a/styles.css
+++ b/styles.css
@@ -510,9 +510,9 @@ tr.duplicate td {
 }
 
 .compact-width {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 80% !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
 .text-center {
